--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
   
-  <h1>Hello World</h1>
+  <h1>Hello World my name is Samantha Prewitt
+    
+  </h1>
 
   <script src="js/scripts.js"></script>
 </body>
